# chocolate_duke3D

./: CMakeLists.txt  README.md  configure.ac  duke3d_vs2005.sln  duke3d_vs2008.sln  duke3d_vs2010.sln
Engine/: CMakeLists.txt  Engine_vs2008.vcproj  Engine_vs2012.vcxproj
Engine/src/: cache.c  display.c  draw.c  draw.h  engine.c  filesystem.c
Game/: Game_vs2008.vcproj  Game_vs2010.vcxproj  Game_vs2012.vcxproj.filters
Game/src/: actors.c  control.h  cvar_defs.c  cvar_defs.h  duke3d.h  game.c  global.c  menues.c
Game/src/audiolib/: CMakeLists.txt  dsl.c  multivoc.c  multivoc.h
Game/src/midi/: CMakeLists.txt  sdl_midi.c
